bitbybit-tests/tests/ui/exhaustive_with_catchall.stderr
error: custom attribute panicked
 --> tests/ui/exhaustive_with_catchall.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: Enum has a catchall variant, but all possible values are already covered
